# securemessage

./: .gitignore
cpp/: CMakeLists.txt  Makefile  securemessage.proto
cpp/include/: byte_buffer.h  crypto_ops.h  public_key_proto_util.h  raw_secure_message_parser.h  secure_message_builder.h  secure_message_parser.h  secure_message_wrapper.h  util.h
cpp/src/: byte_buffer.cc  crypto_ops.cc  crypto_ops_openssl.cc  public_key_proto_util.cc  raw_secure_message_parser.cc  secure_message_builder.cc  secure_message_parser.cc  secure_message_wrapper.cc  util.cc
cpp/src/securemessage/: crypto_ops_openssl.cc  public_key_proto_util.cc  secure_message_parser.cc  secure_message_wrapper.cc
cpp/test/: builder_parser_test.cc  crypto_ops_test.cc  public_key_proto_util_test.cc  secure_message_parser_test.cc
cpp/test/securemessage/: public_key_proto_util_test.cc
proto/: securemessage.proto
